More pagination, and updating count in tab label.

--- a/app/views/searchers/_mediawiki_results.html.erb
+++ b/app/views/searchers/_mediawiki_results.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="list-group mb-3">
   <% @searcher.each do |hit| %>
     <%= render partial: 'mediawiki_hit.html.erb', locals: { hit: hit } %>
   <% end %>
