--- a/app/views/searchers/index.html.erb
+++ b/app/views/searchers/index.html.erb
@@ -20,13 +20,13 @@
   <div class="mt-3">
     <ul class="nav nav-tabs" id="source-select" role="tablist">
       <% SEARCHERS.keys.each do |searcher| %>
-        <%= search_tab_label(searcher, active_searcher: @active_searcher) %>
+        <%= search_tab_html(searcher, active_searcher: @active_searcher) %>
       <% end %>
     </ul>
 
     <div class="tab-content m-3">
       <% SEARCHERS.keys.each do |searcher| %>
-        <%= search_tab_panel(searcher, active_searcher: @active_searcher) %>
+        <%= search_results_html(searcher, active_searcher: @active_searcher) %>
       <% end %>
     </div>
   </div>
