--- a/app/views/searchers/_mediawiki_hit.html.erb
+++ b/app/views/searchers/_mediawiki_hit.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item list-group-item-action">
   <a target="_blank" href="<%= "#{@config[:base_wiki_url]}?title=#{hit['title']}" %>">
     <%= hit['title']%>
   </a>
