--- a/app/views/searchers/_slack_hit.html.erb
+++ b/app/views/searchers/_slack_hit.html.erb
@@ -1,6 +1,10 @@
-<li>
-  @<%= hit['username'] %>
-  <a target="_blank" href="<%= hit['permalink'] %>">
-    <%= hit['text'] %>
-  </a>
+<li class="list-group-item list-group-item-action">
+  <% if hit['type'] == 'message' %>
+    @<%= hit['username'] %>
+    <a target="_blank" href="<%= hit['permalink'] %>">
+      <%= hit['text'] %>
+    </a>
+  <% else %>
+    Private message redacted.
+  <% end %>
 </li>
