--- a/app/views/searchers/_mediawiki_hit.html.erb
+++ b/app/views/searchers/_mediawiki_hit.html.erb
@@ -1,3 +1,5 @@
-<a target="_blank" href="<%= "#{@config[:base_wiki_url]}?title=#{hit['title']}" %>">
-  <%= hit['title']%>
-</a>
+<li class="list-group-item list-group-item-action">
+  <a target="_blank" href="<%= "#{@config[:base_wiki_url]}?title=#{hit['title']}" %>">
+    <%= hit['title']%>
+  </a>
+</li>
