--- a/app/views/searchers/_mediawiki_hit.html.erb
+++ b/app/views/searchers/_mediawiki_hit.html.erb
@@ -1,5 +1,5 @@
 <li class="list-group-item list-group-item-action">
-  <a target="_blank" href="<%= "#{@config[:base_wiki_url]}?title=#{hit['title']}" %>">
+  <a target="_blank" href="<%= "#{@searcher.hit_url(hit)}" %>">
     <%= hit['title']%>
   </a>
 </li>
