--- a/app/views/searchers/_otrs_hit.html.erb
+++ b/app/views/searchers/_otrs_hit.html.erb
@@ -8,7 +8,7 @@
       <small><%= otrs_age(hit) %></small>
     </div>
   </div>
-  <p class="mb-1"><%= otrs_first_body(hit) %></p>
+  <p class="mb-1 ml-3 font-italic"><%= otrs_first_body(hit) %></p>
   <div class="d-flex w-100 justify-content-between">
     <small><%= otrs_customer(hit) %></small>
     <div>
