--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap';
 @import 'font-awesome';
 
-@import 'application/mediawiki'
+@import 'application/mediawiki';
+@import 'application/slack';
