--- a/app/views/searchers/_slack_hit.html.erb
+++ b/app/views/searchers/_slack_hit.html.erb
@@ -1,10 +1,16 @@
-<li class="list-group-item list-group-item-action">
+<a target="_blank"
+   href="<%= hit['permalink'] %>"
+   class="list-group-item list-group-item-action flex-column align-items-start">
   <% if hit['type'] == 'message' %>
-    @<%= hit['username'] %>
-    <a target="_blank" href="<%= hit['permalink'] %>">
-      <%= hit['text'] %>
-    </a>
+    <div class="d-flex w-100 justify-content-between">
+      <span class='slack-user'>@<%= hit['username'] %></span>
+      <small><%= slack_age(hit) %></small>
+    </div>
+    <p class="mb-1 pl-3 font-italic"><%= hit['text'] %></p>
+    <div class="d-flex w-100 justify-content-between">
+      <small><%= hit['channel']['name'] %></small>
+    </div>
   <% else %>
-    Private message redacted.
+    <%= t('views.slack.redacted') %>
   <% end %>
-</li>
+</a>
